--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -32,7 +32,10 @@ jobs:
     - name: Build project
       run: |
         . $HOME/esp/esp-idf/export.sh
+        cd Blink_LED
         idf.py build
 
     - name: Print build output
-      run: idf.py build | cat
+      run: |
+        cd Blink_LED
+        idf.py build | cat
