--- a/.github/workflows/esp32.yml
+++ b/.github/workflows/esp32.yml
@@ -29,6 +29,10 @@ jobs:
         git checkout v5.3.1
         ./install.sh
 
+    - name: Disable warnings as errors
+      run: |
+        echo "CONFIG_COMPILER_WARNINGS_AS_ERRORS=n" > sdkconfig
+
     - name: Set up environment
       run: |
         . $HOME/esp/esp-idf/export.sh
