--- a/Http_server/src/CMakeLists.txt
+++ b/Http_server/src/CMakeLists.txt
@@ -1,9 +1,6 @@
 # This file was automatically generated for projects
 # without default 'CMakeLists.txt' file.
 
-# FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
+FILE(GLOB_RECURSE app_sources ${CMAKE_SOURCE_DIR}/src/*.*)
 
-# idf_component_register(SRCS ${app_sources})
-
-idf_component_register(SRCS "web_server.c"
-                    INCLUDE_DIRS ".")
+idf_component_register(SRCS ${app_sources})
